Updates Made in this commit: .) MyJDBC.java removed un-used method .) Shared_Data_Registry created get methods for Id_Object by ID .) Parent_Screen.java refactored method into private
.) Edit Screens refactored delete methods  methods

.) Add / Edit Screens refactored

Next To Do:

.) Refactor MPS add meal object with new methods

Previous Updates:
.)

Errors
.)